--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,11 +1,43 @@
+:root {
+  --green: #0d646a;
+  --light-grey: #dfdfdf;
+  --med-grey: #131313;
+  --dark-grey: #454545;
+
+  --shadow: rgba(0, 0, 0, 0.4);
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 body {
+  height: 100vh;
   margin: 0;
+  background-color: var(--dark-grey);
 }
+
+body > div,
+body > div > div {
+  height: 100%;
+}
+
+.main-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  width: 100%;
+  max-width: 960px;
+  margin: -6rem auto 0px auto;
+}
+
 article,
 aside,
 details,
