--- a/src/components/header-nav.css
+++ b/src/components/header-nav.css
@@ -1,37 +1,41 @@
+#header-nav {
+  position: absolute;
+}
+
 #nav-button {
   display: flex;
   grid-column-start: 1;
   grid-row-start: 1;
   height: 2rem;
   width: 2rem;
+  margin: 0.3rem 0 0 0.3rem;
+  padding: 0;
+  border: 0;
   z-index: 1;
-  color: #ffffff;
+  background-color: var(--green);
 }
 
-#nav-hamburger {
+#hamburger-image {
   display: flex;
   grid-column-start: 1;
   grid-row-start: 1;
   height: 2rem;
   width: 2rem;
   z-index: 1;
-  color: #ffffff;
 }
 
 #nav-drop-down {
   display: flex;
-  height: 2rem;
-  width: 2rem;
+  height: 5rem;
+  margin-left: -100vw;
   grid-column-start: 1;
   grid-row: 1;
-  margin-top: 2rem;
   transition: all 1.2s;
-  transform-origin: top left;
 }
 
 #nav-drop-down.ease-out {
   display: flex;
-  transform: scale(0.01, 0.1);
+  transform: translate(98vw);
   margin-top: 0rem;
 }
 
@@ -40,23 +44,31 @@
   flex-direction: column;
   justify-content: flex-start;
   align-content: space-around;
-  margin: 0.1rem 0 0.1rem 0;
+  margin: 0;
   padding: 0;
+  border: 0;
+  background-color: var(--med-grey);
 }
 
 .nav-item {
   display: flex;
-  margin: 0.1rem 0.2rem 0.1rem 0.2rem;
-  padding: 0rem;
+  margin: 0;
+  padding: 0 1rem;
+  border-top: 0.15rem solid #3c3c3c;
+  border-right: 0.15rem solid #3c3c3c;
+}
+
+.nav-item:last-child {
+  border-bottom: 0.15rem solid #3c3c3c;
 }
 
 .nav-item a {
   display: flex;
   width: 8rem;
-  padding: 0.3rem;
-  border: 0.15rem solid #3c3c3c;
+  margin: 0;
+  padding: 0.6rem;
   border-radius: 0.1rem;
   text-decoration: none;
-  background-color: #1a1b1f;
-  color: #eeeeee;
+  background-color: var(--med-grey);
+  color: #ffffff;
 }
