--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -229,7 +229,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: lato sans-serif;
+  font-family: Lato, sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
