--- a/src/components/main-card.module.css
+++ b/src/components/main-card.module.css
@@ -1,13 +1,21 @@
 .container {
-  position: relative;
+  position: inherit;
   display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: auto;
-  margin: 0rem 1.2rem 0 1.2rem;
+  margin: 0.8rem 1.2rem 1rem 1.2rem;
   padding: 0.4rem 1.6rem 0.4rem 0.8rem;
   border: 1px solid #121212;
   border-radius: 0.2rem;
   background-color: var(--light-light-grey);
   color: #000000;
   box-shadow: 0.5rem 0.5rem 0.8rem var(--shadow);
+}
+
+.mainImage {
+  margin-top: 1rem;
 }
