--- a/src/components/home-card.module.css
+++ b/src/components/home-card.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex-grow: 0;
   min-height: 10rem;
   width: auto;
@@ -14,13 +16,19 @@
 .title {
   display: flex;
   justify-content: center;
-  min-height: 2rem;
   align-items: center;
   flex-grow: 1;
   width: auto;
-  margin: 0;
+  margin: 0 0rem;
   border: 0;
   padding: 0;
-  background-color: var(--dark-grey);
   color: #ffffff;
+}
+
+.tag {
+  align-self: flex-start;
+  margin: 1.8rem 0 -2.5rem 2rem;
+  padding: 0;
+  border: 0;
+  color: var(--med-grey);
 }
