--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,7 +7,7 @@
 
   --shadow: rgba(0, 0, 0, 0.4);
 
-  font-size: 16px;
+  font-size: 14px;
 }
 
 html {
@@ -23,7 +23,7 @@ body {
 }
 
 .main-wrapper {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0;
