--- a/src/components/header-nav.module.css
+++ b/src/components/header-nav.module.css
@@ -52,6 +52,7 @@
   padding: 0 0 0 2.4rem;
   border-top: 0.15rem solid #3c3c3c;
   border-right: 0.15rem solid #3c3c3c;
+  background-color: var(--dark-grey);
 }
 
 .navItem:last-child {
