--- a/src/components/main-card.module.css
+++ b/src/components/main-card.module.css
@@ -8,17 +8,18 @@
   height: 100%;
   width: auto;
   margin: 0.8rem 1.2rem 1rem 1.2rem;
-  padding: 0.4rem 1.6rem 0.4rem 0.8rem;
   border: 1px solid #121212;
   border-radius: 0.2rem;
   background-color: var(--light-light-grey);
   color: #000000;
   box-shadow: 0.5rem 0.5rem 0.8rem var(--shadow);
+  background-image: url(../images/hugo.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .mainImage {
-  margin-top: 1rem;
-  height: auto;
-  max-height: 100%;
-  width: 100%;
+  max-height: auto;
+  max-width: 100%;
 }
